Fix fb url. Fix scrollbar appear when navigate.

--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -10,6 +10,7 @@ body {
   height: 100%;
   padding: 0;
   font-family: 'Open Sans', sans-serif;
+  overflow-x: hidden;
 }
 
 .wrap {
